@@ -57,6 +57,7 @@ Template for new versions:
 
 ## Fixes
 - Fixed misidentification of visitors from your own civ as residents; affects all tools that iterate through citizens/residents
+- `cursecheck`: don't try to rely on cursor; check for selected unit instead
 
 ## Misc Improvements
 - `suspendmanager`: Account for walls planned on the z-layer below when determining accessibility to a job
